--- a/9.0.HerramientasDiseño3D.md
+++ b/9.0.HerramientasDiseño3D.md
@@ -11,13 +11,13 @@ Otro tipo de diseño es el llamado **Paramétrico** o **CAD** (Computer Aid Desi
 
 ![Diseño paramétrico o CAD](./images/diseñoParametrico.jpeg)
 
-En el diseño orgánico se suelen utilizar herramientas más similares a las que se usan cuando estamos trabajando artísticamente, es decir, herramienta, similares a las que se usan en la escultura, deformando una pieza, añadiendo material o empujando y tirando de diferentes partes de ella. En definitiva tratándola como si fuera un pedazo de barro.
+En el diseño orgánico se suelen utilizar herramientas más similares a las que se usan cuando estamos trabajando artísticamente, es decir, herramientas similares a las que se usan en la escultura, deformando una pieza, añadiendo material o empujando y tirando de diferentes partes de ella. En definitiva tratándola como si fuera un pedazo de barro.
 
 Un ejemplo podría ser [Sculpt3D](https://stephaneginier.com/sculptgl/)
 
 ![](./images/ScultGL.png)
 
-Entre los software orientados a diseño orgánico está [Blender](https://www.blender.org/), un software opensource de calidad 100% profesional usado en para crear efectos en películas.
+Entre los software orientados a diseño orgánico está [Blender](https://www.blender.org/), un software opensource de calidad 100% profesional también usado para crear efectos en películas.
 
 ![Diseño de personaje en Blender](./images/Character_Sintel-model-sheet.png)
 
