--- a/9.10.Escaneado3D.md
+++ b/9.10.Escaneado3D.md
@@ -1,19 +1,19 @@
 ## Escaneado 3D
 
-Una herramienta muy interesante cuando trabajamos en 3D es el poder escanear piezas reales. Para ello necesitamos Escaner 3D y un software que nos permita importar nuestros modelos
+Una herramienta muy interesante cuando trabajamos en 3D es el poder escanear piezas reales. Para ello necesitamos Escáner 3D y un software que nos permite importar nuestros modelos
 
 
-## Tipos de escanner 3D
+## Tipos de escáner 3D
 
 * Escanner 3D DIY: permite escanear piezas pequeñas, rotándolas y tomando múltiples imágenes. Un software genera una nube de puntos
 
-![Escaner pequeño](./images/Escanner3D.jpeg)
+![Escáner pequeño](./images/Escanner3D.jpeg)
 
 * Escanner profesional: se trata de un escaner de calidad profesional usado para escanear piezas de cualquier tamaño y con una calidad y detalle excelente
 
-![Escanner profesional](./images/go-scan-3d-spark.jpeg)
+![Escáner profesional](./images/go-scan-3d-spark.jpeg)
 
-## Escanner de luz estructurada
+## Escáner de luz estructurada
 
 (Gracias a Esteban Fernández Navarro por esta documentación)
 
@@ -44,9 +44,9 @@ El otro método es el escáner que dispone de su propio software y es más adecu
 
 El resultado es un modelo muy detallado que se puede remodelar o imprimir directamente.
 
-Vamos a explicar con más detalle el proceso de escaneado con en **escaner EinScan-SE**
+Vamos a explicar con más detalle el proceso de escaneado con el **escáner EinScan-SE**
 
-El escaner dispone de una cámara estereoscópica que permite ontener imágenes 3D con luz estructurada. Puede escanear con color o solo el volumen. Dispone de un plato giratorio que captura los 360º del objeto a intervalos de 45º.
+El escaner dispone de una cámara estereoscópica que permite obtener imágenes 3D con luz estructurada. Puede escanear con color o solo el volumen. Dispone de un plato giratorio que captura los 360º del objeto a intervalos de 45º.
 
 En este caso he utilizado un botijo de cerámica:
 
@@ -65,7 +65,7 @@ Las imágenes que va tomando el escáner las va superponiendo con el reconocimie
 
 ![](./images/IMG_20210507_140214_2.jpg)
 
-Finalmente se obtiene un modelo formado por una nube de puntos con los cuales podemos formar una malla de triángulos. La resolución es muy alta. El programa te permite reducir la cantidad de información del modelo. En el ejemplo de la imagen, con una resolución baja obteneos un modelo con más de 4.000.000 de triángulos. Para que no se bloquee el ordenador tengo que diezmarlo hasta quedarme con un modelo con 100.000 triángulos.
+Finalmente se obtiene un modelo formado por una nube de puntos con los cuales podemos formar una malla de triángulos. La resolución es muy alta. El programa te permite reducir la cantidad de información del modelo. En el ejemplo de la imagen, con una resolución baja obtenemos un modelo con más de 4.000.000 de triángulos. Para que no se bloquee el ordenador tengo que diezmarlo hasta quedarse con un modelo con 100.000 triángulos.
 
 El programa te permite generar la malla abierta o cerrada y modificar la escala del objeto.
 
@@ -84,13 +84,13 @@ Para simplificar aún más el modelo o para trabajar con una malla ordenada util
 
 
 
-## Escanner 3D DIY
+## Escáner 3D DIY
 
-Si quieres puedes montarte este [escanner 3D DIY](https://www.thingiverse.com/thing:3958326)
+Si quieres puedes montarte este [escáner 3D DIY](https://www.thingiverse.com/thing:3958326)
 
 ![](./images/featured_preview_IMG_0007.jpeg)
 
-Es un escaner para fotogrametría con un móvil:
+Es un escáner para fotogrametría con un móvil:
 
 * Necesita un montaje con arduino (conozco un curso donde explican cómo hacerlo)
 * Hay que imprimir algunas piezas
