--- a/9.2.0.Tinkercad.md
+++ b/9.2.0.Tinkercad.md
@@ -1,10 +1,10 @@
 # [TinkerCad.com](https://www.tinkercad.com/)
 
-![1](./images/tinkercad.png)
+![](./images/tinkercad.png)
 
 Tinkercad es una herramienta online gratuita para comenzar a diseñar en 3D. Aunque a primera vista parece una herramienta para niños, con un poco de práctica nos permite hacer diseños bastantes avanzados:
 
-![2](./images/notre-dame-tinkercad.png)
+![](./images/notre-dame-tinkercad.png)
 
 Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta generar nuestro diseño.
 
@@ -14,7 +14,7 @@ Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta 
 
 [Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://drive.google.com/file/d/1CAok4UF-qGb3JR4TMXlm3pS_s-qQC04e/view?usp=sharing)
 
-* Necesita crearse una cuenta: Podemos crearla con nuestro email o usar la autentificación de Google o de Facebook
+* Necesita crearse una cuenta: Podemos crearla con nuestro email o usar la autenticación de Google o de Facebook
 
 [![Vídeo: 1. Creación de un cuenta en Tinkercad](https://img.youtube.com/vi/RLo6XVDkulg/0.jpg)](https://drive.google.com/file/d/1oafxrB9_Afyq467kIS-et7ghOzUb0Zrb/view?usp=sharing)
 
@@ -25,15 +25,16 @@ Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta 
 
 ## Interface
 
-  * Creación de piezas y movimiento del punto de vista
+Creación de piezas y movimiento del punto de vista
 
-  [![Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://img.youtube.com/vi/MdqyZvXOxDU/0.jpg)](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
-  
-  [Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
+[![Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://img.youtube.com/vi/MdqyZvXOxDU/0.jpg)](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
+
+[Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
 
 ## Paletas de componentes
 
 A la derecha encontramos las paletas de primitivas:
+
   * Geometrías  
   * Letras, Números y símbolos
   * Favoritos
@@ -44,13 +45,19 @@ A la derecha encontramos las paletas de primitivas:
 
 [![Video: 3. Uso de paletas de primitivas](https://img.youtube.com/vi/Xv_ZSyiRaY8/0.jpg)](https://drive.google.com/file/d/16HLUdWgSOmbnK2T5we5QDWT_EFRt1v0-/view?usp=sharing)
 
+[Video: 3. Uso de paletas de primitivas](https://drive.google.com/file/d/16HLUdWgSOmbnK2T5we5QDWT_EFRt1v0-/view?usp=sharing)
+
 ## Propiedades de un diseño
 
 [![Video: 4. Propiedades de un diseño](https://img.youtube.com/vi/-uj2iGIRV38/0.jpg)](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
 
+[Video: 4. Propiedades de un diseño](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
+
 ## Giros y rotaciones
 
 [![Video: 5 Giros y rotaciones](https://img.youtube.com/vi/pb2iHcSGiQU/0.jpg)](https://drive.google.com/file/d/1Z1YQ0bZRSdEIl9aSInAokpPQ0HU6A36a/view?usp=sharing)
+
+[Video: 5 Giros y rotaciones](https://drive.google.com/file/d/1Z1YQ0bZRSdEIl9aSInAokpPQ0HU6A36a/view?usp=sharing)
 
 ## Ejemplo: diseñando una casita
 
@@ -58,15 +65,20 @@ Vamos a hacer un diseño sencillo de una casita, usaremos los elementos que hemo
 
 [![Video: 6. Ejemplo: una casita](https://img.youtube.com/vi/hAMeqIeFUXE/0.jpg)](https://drive.google.com/file/d/1_eg8brz1fdx0EWn70wXMl7xLcq2DXGzD/view?usp=sharing)
 
+[Video: 6. Ejemplo: una casita](https://drive.google.com/file/d/1_eg8brz1fdx0EWn70wXMl7xLcq2DXGzD/view?usp=sharing)
+
 ## Agrupar y desagrupar elementos
 
-Al agrupar varias piezas hacemos que todas ellas se comportan como una sóla, a la hora de moverlas, redimensionarlas, rotarlas, etc... lo que es muy útil para ir construyendo diseños más complejo.s
+Al agrupar varias piezas hacemos que todas ellas se comporten como una sola, a la hora de moverlas, redimensionarlas, rotarlas, etc... lo que es muy útil para ir construyendo diseños más complejo.s
 
 La agrupación puede ser sucesiva, es decir, podemos agrupar nuevos elementos sobre los que ya habíamos agrupado otros.
 
 De la misma manera, cuando los vamos desagrupando, se hace progresivamente.
 
 [![Video: 7. Agrupar y desagrupar elementos](https://img.youtube.com/vi/BQqTM9iM89U/0.jpg)](https://drive.google.com/file/d/1tQCUuhg-krdwzpap2_xn_qtJgFC4c7fi/view?usp=sharing)
+
+[Video: 7. Agrupar y desagrupar elementos](https://drive.google.com/file/d/1tQCUuhg-krdwzpap2_xn_qtJgFC4c7fi/view?usp=sharing)
+
 
 ## Copiar pegar objetos
 
@@ -80,14 +92,14 @@ Podemos usar la herramienta de alineación para colocar varias piezas alineadas,
 
 * Seleccionamos las piezas que queremos alinearç
 * Pulsamos sobre la herramienta de alineamiento (junto a la de agrupar/desagrupar)
-* Selccionamos donde queremos alinearlas
-* Pulsamos las diferentes piezas seleccioandas para decidir cuál marca la referencia
+* Seleccionamos donde queremos alinearlas
+* Pulsamos las diferentes piezas seleccionadas para decidir cuál marca la referencia
 
 [![Video: 10. Alineamiento entre distintos componentes](https://img.youtube.com/vi/vStwTeyoQrs/0.jpg)](https://drive.google.com/file/d/1lBoD6ih0AnDRIEmQk64PCrGwjUPkSQkf/view?usp=sharing)
 
 ## Trabajando con huecos
 
-Del mismo modo que trabajamos añadiendo bloques, también podemos "restar" volúmenes usando bloques **huecos**, es decir usaremos las mismas primimitivas, pero marcándolos como "Hueco". A agruparlos con otros componentes su voluen se restará.
+Del mismo modo que trabajamos añadiendo bloques, también podemos "restar" volúmenes usando bloques **huecos**, es decir usaremos las mismas primitivas, pero marcándolos como "Hueco". Al agruparlos con otros componentes su volumen se restará.
 
 [![Video: 11. Trabajando con huecos](https://img.youtube.com/vi/vXhMgF0qSNw/0.jpg)](https://drive.google.com/file/d/1UrR2SUDeJQ8VyW2t3psS7Cbq6P8ka5xo/view?usp=sharing)
 
@@ -159,3 +171,4 @@ Cuando ya tenemos la imagen
 * Ctrl + Shift + G Separate a shape into the single objects
 * L Opens the align tool
 * M Takes you to the mirror tool
+
