--- a/9.4.Blender.md
+++ b/9.4.Blender.md
@@ -2,7 +2,7 @@
 
 Blender es un software profesional de diseño orgánico muy usado en la industria del 3D.
 
-![blender](https://www.blender.org/wp-content/uploads/2016/09/blender_278_splash_hires.jpg)
+![Ejemplo de diseño con Blender](https://www.blender.org/wp-content/uploads/2016/09/blender_278_splash_hires.jpg)
 
 La instalación es muy sencilla, pudiendo descargar desde su [página de descarga](https://www.blender.org/download/)
 
@@ -16,17 +16,16 @@ Algunos detalles:
 
 ## Antes de abrirlo:.... Tranquilidad...
 
-Tienes 3 "programas"
+Tienes 3 "programas":
+
 * Blender Render (Interno)
 * Blender game (Juego)
 * Cycles render (Cycles)
 
 
 Para cambiar el idioma:
-* User settings
-  * System
-    * Using international Fonts
-      * Marcamos las opciones que queramos
+
+* User settings -> System ->  Using international Fonts ->  Marcamos las opciones que queramos
 
 Cuidado, porque los Tutoriales puede que no se correspondan con tu versión...
 
@@ -50,18 +49,18 @@ Mejor con ratón y teclado numérico
 
 (View abajo a la derecha muestra las teclas)
 
-* Click izquierdo marca el punto origen de las rotaciones y movmientos
+* Click izquierdo marca el punto origen de las rotaciones y movimientos
 * Scroll: zoom
 * Botón de scroll pulsado: gira (orbitar)
-* Botón derecho: click selecciona (Shift para seleccionar más de uno)
-* Deseleccionar click derecho fuera del objeto
-* Boton derecho pulsado: mueve lo que se ha marcado. Para confirmar el movimiento click izquierdo para perder cambio click botón derecho
+* Botón derecho: clic selecciona (Shift para seleccionar más de uno)
+* Deseleccionar clic derecho fuera del objeto
+* Botón derecho pulsado: mueve lo que se ha marcado. Para confirmar el movimiento click izquierdo para perder cambio clic botón derecho
 
 Son movimientos en 3D pero desde 2D....
 
 Si pulsamos sobre los vectores de los ejes nos movemos por ellos
 
-Ctrl-Z deshace el útimo cambio y Ctrl-Shift-Z lo rehace
+Ctrl-Z deshace el último cambio y Ctrl-Shift-Z lo rehace
 
 Borrar un objeto/trazos (desde Modo Objeto/Trazo)
 
@@ -74,14 +73,14 @@ Borrar un objeto/trazos (desde Modo Objeto/Trazo)
 * g mueve
 * w fusiona (merge) los seleccionados
 * e Extrusión
-* Sifht+c Centra la imagen en el cursor 3D
+* Shift+c Centra la imagen en el cursor 3D
 * ¿.?
 * 5 cambia perspectiva/ortogonal
 * 1,3,7 selecciona vista derecha,delante,arriba (con ctrl el inverso)
 * 7,8,9 orbita (ctrl el inverso)
-* Ctrl+q  Vista cuadruple
+* Ctrl+q  Vista cuádruple
 * Ctrl+r divide la selección en varios. Mientras está morado podemos añadir más con la rueda del ratón.
-* B selecciona varios con forma de cuadrado. Cuando seleccionamos depende del modo de vista (refilla, solido, ...)
+* B selecciona varios con forma de cuadrado. Cuando seleccionamos depende del modo de vista (rejilla, sólido, ...)
 * C selecciona varios con forma de círculo
 * Alt+C convierte entre tipos (malla, ...)
 * Ctrl+j Une objetos
@@ -89,7 +88,7 @@ Borrar un objeto/trazos (desde Modo Objeto/Trazo)
 * Alt+M Fusionar (Merge)
 * F3 guarda la imagen del render
 * N abre las propiedades
-* Alt+Boton derecho ...
+* Alt+Botón derecho ...
 
 
 ## Vistas
@@ -120,8 +119,6 @@ Borrar un objeto/trazos (desde Modo Objeto/Trazo)
   * Podemos mostrar o no cada componentes
   * Se muestran las dependencias
 
-Ctrl+q  Vista cuadruple
-
 Podemos ver los objetos en diferentes formas: texturas, alambre, formas,...
 
 Seleccionamos distintas vistas con las teclas numéricas (derecha, arriba, giros, etc...) También en el menú Vista
@@ -143,8 +140,6 @@ Modificadores, permiten suavizar (llave inglesa), solidificar (añade grosor)
 Materiales
 
 
-
-
 ## Add Object
 
 Cuando se añade un objeto tenemos opciones (número de segmentos, etc...)
@@ -152,13 +147,11 @@ Cuando se añade un objeto tenemos opciones (número de segmentos, etc...)
 Se añade donde esté el cursor 3D
 
 
-
-
 ## Usar imágenes de fondo como guía
 
 Pulsamos N para ver propiedades y en Imágenes de fondo marcamos cada una de las imágenes para una vista determinada
 
-## Materiales, illuminación y renderizado
+## Materiales, iluminación y renderizado
 
 [Ejemplo anillo](https://youtu.be/zqhi8q4EGZk?t=9m17s)
 
