--- a/9.5.SketchUp.md
+++ b/9.5.SketchUp.md
@@ -1,6 +1,6 @@
 # [SketchUp](https://www.sketchup.com/es)
 
-![s](./images/free_floorplan_software_sketchup_furniture1.jpg)
+![](./images/free_floorplan_software_sketchup_furniture1.jpg)
 
 [Video tutoriales](http://www.sketchup.com/es/learn/videos/58?playlist=58)
 
@@ -19,9 +19,9 @@ Es una herramienta 2D que permite "levantar" los dibujos
   * Al dibujar hay puntos "selectos" que nos capturan el ratón (centro, esquinas, etc) y
   * Direcciones especiales (ejes y paralelas) que se muestran con colores distintos. Podemos indicar la guía sin más que tocar el punto (ejemplo de línea hasta la mitad o paralela a otra)
   * Herramienta Push/Pull
-  * Podemos usar las herramientas "Orbitar" (Clic sobre la rueda del raton), "Desplazar" y "Zoom" (Rueda del raton) (Siempre podemos volver a vistas)
+  * Podemos usar las herramientas "Orbitar" (Clic sobre la rueda del ratón), "Desplazar" y "Zoom" (Rueda del ratón) (Siempre podemos volver a vistas)
   * Podemos dividir una cara sin más que añadir una arista y podemos desplazar la aristas con la herramienta "Mover", que nos permite mover vértices, aristas y caras
-  * Herramienta de goma, muy pontente. Si borramos caras de arriba veremos porqué decimos que es una herramienta 2D
+  * Herramienta de goma, muy potente. Si borramos caras de arriba veremos por qué decimos que es una herramienta 2D
   * Herramienta de offset (y follow me)
   * Podemos crear objetos de medidas exactas usando las cantidades (separadas por ;)
   * Podemos trabajar fuera o dentro de nuestro modelo
