--- a/9.7.OpenScad.md
+++ b/9.7.OpenScad.md
@@ -8,24 +8,22 @@
 
 Podemos instalarlo descargando desde su [página de descargas](http://openscad.org/downloads.html)
 
-Es muy útil para hacer diseños en los que hay partes repetivas, como esta (parde delos ejemplos de [María de Tecnoloxia](https://tecnoloxia.org/openscad/) )
+Es muy útil para hacer diseños en los que hay partes repetitivas, como esta (parte de los ejemplos de [María de Tecnoloxia](https://tecnoloxia.org/openscad/) )
 
 
-![](https://tecnoloxia.org/wp-content/uploads/openscad_for_canicas.png)
+![](./images/openscad_for_canicas.png)
 
 O esta típica "Tableta de chocolate"
 
-![](https://tecnoloxia.org/impresion3d/wp-content/uploads/sites/6/2021/05/openscad_panel.png)
+![](./images/openscad_panel.png)
 
 Vemos que a la derecha está la zona de programación y a la derecha vemos el diseño resultante
 
 Podemos ver las operaciones disponibles en esta [Chuleta](http://openscad.org/cheatsheet/index.html)
 
 
-![](https://tecnoloxia.org/impresion3d/wp-content/uploads/sites/6/2021/05/openscad_sintaxe.png)
+![](./images/openscad_sintaxe.png)
 
-Normalmente trabajaremos con piezas primitivas (poliedros, cilindros, esferas, etc..) a las que aplicamos transformaciones (movimiento, rotación, reescalado,...) y realizando operaciones lógicas entre ellos (intersección, unión, diferencia,...)
-
-
+Normalmente trabajaremos con piezas primitivas (poliedros, cilindros, esferas, etc..) a las que aplicamos transformaciones (movimiento, rotación, escalado, ...) y realizando operaciones lógicas entre ellos (intersección, unión, diferencia, ...)
 
 
