--- a/9.6.BlockScad.md
+++ b/9.6.BlockScad.md
@@ -1,6 +1,6 @@
 # [BlockScad](https://www.blockscad3d.com/editor/)
 
-![1](./images/BlocksCad.jpeg)
+![](./images/BlocksCad.jpeg)
 
 [BlockScad](https://www.blockscad3d.com/editor/) es un programa de diseño algorítmico que utiliza bloques para definir el programa que genera un diseño 3D. Podemos trabajar con él desde su web, sin necesidad de instalar nada.
 
@@ -12,4 +12,4 @@ Tras la aparente simplicidad de los bloques permite hacer diseños muy complejos
 
 [Tutoriales](https://www.blockscad3d.com/edu/lessons/)
 
-[Recuros para profesores](https://www.blockscad3d.com/edu/resources/)
+[Recuraos para profesores](https://www.blockscad3d.com/edu/resources/)
