--- a/6.0.2.Adherencia.md
+++ b/6.0.2.Adherencia.md
@@ -25,9 +25,12 @@ También se pueden producir problemas de adherencia si la temperatura de la base
 1. Recalibra la base con frecuencia: una vez estamos acostumbrados a hacerlo no tardamos nada, incluso si es leve podemos hacerlo mientras imprimimos viendo la forma en la que se imprime la primera capa.
 1. Subir temperatura de la base: al subirla conseguiremos una mejor adherencia, pero no sirve de nada si nuestra pieza ya ha comenzado a despegarse
 1. Añadir laca: si imprimimos sobre cristal o una superficie muy lisa podemos mejorar la adherencia usando laca. Sirve casi cualquier laca, pero siempre he obtenido muy buenos resultados con la de la marca Nelly. Si añadimos mucha laca la pieza puede quedarse con parte de ella adherida, y salvo que el filamento sea blanco, se notarán los restos.
-1. También se pueden usar otros materiales para mejorar la adherencia, como la cinta de carrocero o el pegamento en barra.
+1. También se pueden usar otros materiales para mejorar la adherencia, como la cinta de carrocero, cinta Kapton o el pegamento en barra.
 1. Añadir elementos de mejora de la adherencia como brim/falda/... en el laminado: estos elementos van a mejorar el agarre de la pieza. A veces pueden ser útiles si se añaden a las esquinas de nuestro modelo si este es bastante ancho.
 
+Una pregunta frecuente es si cuando avanza la impresión podemos dejar de calentar base: si dejamos que se enfríe la base, la pieza se acaba despegando. Si además usamos un plástico como el ABS, con toda seguridad, partes de la pieza empezarán a despegarse deformando el resultado.
+
+![](./images/wraping3D.jpeg)
 
 ## Tipos de base y su resultado
 
