--- a/7.5.1.Octoprint.md
+++ b/7.5.1.Octoprint.md
@@ -17,6 +17,8 @@ Podemos utilizar cualquier ordenador, pero en mi caso usaré una Raspberry:
 
 ![Raspberry Pi 3B](./images/Raspberry_Pi_3_Model_B.png)
 
+Para que funcione bien, al menos tienes que una Raspberry Pi 3 o una Raspberry Pi Zero W 2. Con versiones anteriores no se puede garantizar un funcionamiento adecuado.
+
 
 [![Vídeo: 7.5.2 Instalación de Octoprint](https://img.youtube.com/vi/5QqRwdIRhK8/0.jpg)](https://drive.google.com/file/d/1cDrPsKW89hJVOzRsAyKaIQNjr-PQkUWg/view?usp=sharing)
 
