--- a/6.2.Cura_avanzado.md
+++ b/6.2.Cura_avanzado.md
@@ -24,3 +24,6 @@ En todo momento podemos buscar entre todos los parámetros por nombre usando la 
 
 [Vídeo: 6.2.x Uso de configuración avanzada en Ultimaker Cura](https://drive.google.com/file/d/1OWxtLtCngFeWha7PUGAu9fCjg1W7y9sc/view?usp=sharing)
 
+Algunas de las opciones están accesibles en el grupo de "Experimentales". Tendremos que activarlas su visualización para poder acceder a ellas y luego activarlas. Por ejemplo podemos activar la "Altura de capa variable"
+
+![](./images/AlturaCapaVariableCura.png)
