--- a/7.1.limpieza.md
+++ b/7.1.limpieza.md
@@ -42,5 +42,7 @@ La base sobre la que imprimimos es un componente fundamental para conseguir impr
 
 Los ventiladores son sin duda el componente donde más suciedad se acumula, debido al flujo permanente de aire que soporta. Por eso es importante limpiarlos con frecuencia, para evitar que pierdan eficacia y generan más ruido.
 
+![](./images/LimpiezaVentilador.jpeg)
+
 Una falta de rendimiento de los ventiladores puede dar lugar a calentamiento de la electrónica o de otros componentes.
 
