--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -27,51 +27,46 @@
 * [PrusaSlicer](./3.2.Prusaslicer.md)
 * [Arregladores de piezas](./3.4.ReparacionPiezas.md)
 
-## 4. [Tipos de filamentos](./4.0.Filamentos.md) 
+## 4. [Tipos de filamentos](./2.5.Filamentos.md) 
 * tipos
 * usos
 * calidades y precios
 
 ## 5. Montaje y puesta a punto
-* [Estructura de una impresora](./5.0.EstructuraImpresora3D.md)
-* [Tipos de impresoras](5.1.0.Impresoras3D.md) y [geometrías](./5.1.1.Geometrías.md)
-* [Modelos de impresoras 3D](./5.1.2.Modelos.md)
-* [Montaje](./5.2.Montaje.md)
+* [Estructura de una impresora](./4.0.0.EstructuraImpresora3D.md)
+* [Tipos de impresoras](5.1.0.Impresoras3D.md) y [geometrías](./4.1.0.Geometrías.md)
+* [Modelos de impresoras 3D](./4.1.7.Impresoras3D_variantes.md)
+* [Montaje](./4.2.Montaje_Ender3.md)
 * Calibración
 * Pruebas
 
-## 6. [Uso](./6.0.Uso.md)
+## 6. [Uso](./5.0.0.UsoImpresoras3D.md)
 * Menus
 * AutoHome y calibración
 * Impresión
 * Cambio filamento
-* [Proyectos 3D](./6.3.Proyectos3D.md)
-* [Matenimiento](./6.4.Mantenimiento.md)
+* [Proyectos 3D](./6.6.Proyectos3D.md)
+* [Matenimiento](./7.0.Mantenimiento.md)
     * Limpieza
     * Engrasado
     * Ajustes
     * Tensión de las correas
-* [Mejoras de calidad](./6.5.MejoraCalidad.md)    
-* [Escaneado 3D](./6.7.Escaneado3D.md)
+* [Mejoras de calidad](./6.9.0.MejoraCalidad.md)
 * Problemas más frecuentes
     * Atascos
     * Falta de calibración
     * Falta de tensión de las correas
     * Rotura o falta de ajuste de driver de motores
-    * [Fallos de impresión](./6.8.FallosImpresion.md)
+    * [Fallos de impresión](./8.0.0.FallosImpresion.md)
 
-## 7. Diseño 3D
-* [Programas de diseño](./7.0.HerramientasDiseño3D.md)
-* [Diseñando con Tinkercad](./7.2.Tinkercad.md)
-    * Diseños sencillos
-    * Piezas disponibles
-    * Importando modelos
-    * Importando 2D
-* [Freecad](./7.3.Freecad.md)
-* [Blender](./7.4.Blender.md)
-* [BlockScad](./7.5.BlockScad.md)
-* [SketchUp](./7.6.SketchUp.md)
-* [2D to 3D](7.9.2d-To-3D.md)
+## 7. Diseño 3D: 
+* [Programas de diseño](./9.0.HerramientasDiseño3D.md)
+* [Diseñando con Tinkercad](./9.2.0.Tinkercad.md)
+* [Freecad](./9.3.Freecad.md)
+* [Blender](./9.4.Blender.md)
+* [BlockScad](./9.6.BlockScad.md)
+* [SketchUp](./9.5.SketchUp.md)
+* [2D to 3D](9.9.2d-To-3D.md)
 
 
 ## 10. Recetario
