--- a/4.1.6.ArtilleryGenius.md
+++ b/4.1.6.ArtilleryGenius.md
@@ -39,5 +39,10 @@ Dispone de una base de material cerámico con aparentemente muy buena adherencia
 
 ![Base](./images/artillery_genius_9b.jpg)
 
+# TODO: COMPLETAR 
+
+https://www.todomicrostamp.com/data/usr_1526340278659.pdf
+
+Gracias a Joan Soler Abelló por la información sobre este impresora
 
 
