--- a/9.9.2d-To-3D_v2.md
+++ b/9.9.2d-To-3D_v2.md
@@ -1,17 +1,55 @@
 # 2D a 3D
 
-## Tinkercad
+Veamos cómo crear un objeto 3D a partir de un logo. Funciona mejor con imágenes vectoriales (que suelen ser más sencillas)
+
+## Importación en Tinkercad:
 
 * Elegimos la imagen
-* Si no es SVG lo Convertimos a svg (¿qué es SVG?)
-
-https://image.online-convert.com/
-
-
+* Si no es SVG lo convertimos a SVG unsando un [conversor online](https://image.online-convert.com/) o Inkscape, como veremos a continuación
 * Abrimos Tinkercad
-* Import
+* Pulsamos el botón Import y elegimos tamaño y altura.
 
 ## Inkscape
+
+Vamos a ver cómo vectorizar una imagen de mapa de bits usando el software libre InkScape
+
+1. Instalamos el software libre de edición vectorial [Inkscape](https://inkscape.org)
+
+2. Cargamos la imagen del logo en inkscape, mejor cuanto más simple y a ser posible con 2 colores. Por ejemplo este:
+
+![](./images/logo_vectorizar.png)
+
+
+En este caso se ve que se han usado colores distintos para el contorno de las formas y el relleno, mejor sí sólo tenemos 1 color
+
+3. Pulsamos la opción de menú Trayecto -> Vectorizar mapa de bits (Path -> Vectorize bitmap)
+
+![](./images/vectorizacion2.png)
+
+4. Existen diferentes formas de vectorizar, según colores, luminosidad, contornos... Vamos probando y ajustando los parámetros que tienen cada uno hasta encontrar el resultado deseado, ya que vemos la previsualización del resultado
+
+![](./images/vectorizacion3.png)
+
+5. Una vez tenemos un resultado que nos gusta, exportamos el fichero en formato SVG que es el que admite la importación de Tinkercad.
+
+Pulsamos en la opción Archivo -> Exportar
+
+![](./images/inkscape_exportacion.png)
+
+Seleccionamos las opciones de "Sólo la selección", la carpeta destino y el nombre desado y pulsamos "Exportar"
+
+![](./images/inkscape_opciones_exportacion.png)
+
+Ya tenemos nuestro fichero exportado
+
+![](./images/logo_vectorizado.svg)
+
+6. Importamos en Tinkercad el fichero SVG, pudiendo ajustar el tamaño y la altura
+
+![](./images/logo_3D.png)
+
+[Resultado vectorizado](https://www.tinkercad.com/things/k1Toe3QKslz)
+
 
 [Vectorizar con InkScape](https://inkscape.org/es/doc/tutorials/tracing/tutorial-tracing.html)
 
