--- a/4.1.4.CrealityEnder3v2.md
+++ b/4.1.4.CrealityEnder3v2.md
@@ -11,3 +11,17 @@ El montaje es rápido y se puede tener lista la impresora en menos de 1 hora obt
 
 Se trata de impresora de batalla, capaz de imprimir durante bastantes horas con muy buen funcionamiento.
 
+
+### Diferencias entre Ender 3 y Ender 3 Pro
+
+* Tarjeta SD: está en distinta posición y además invertida
+* Han resuelto el problema del ventilador de la Ender 3, ya que al estar en la parte de arriba absorvía todo el polvo y restos de la impresión 3D. En la version Pro, el ventilador de la electrónica está tapado y la electrónica está invertida
+* Podemos ver si tenemos un modelo u otro, revisando el texto de la etiqueta donde aparece cláramente la versión. También podemos ver el modelo al encenderla
+* La fuente de alimentación es más pequeña y estilizada en la versión Pro
+* La base/cama en la Pro  es magnética y muy flexible, mientras que en la otra es rígida y se sujea con pinzas
+
+### Otros modelos
+
+* Pro
+* V2
+* S1
