--- a/9.8.Otros.md
+++ b/9.8.Otros.md
@@ -17,7 +17,9 @@ Una de las características más interesantes es que permite trabajar conjuntame
 
 ### [Autodesk Fusion 360](https://www.autodesk.es/products/fusion-360/overview?term=1-YEAR) 
 
-Es una de las mejores herramientas y se puede conseguir una licencia educativa.
+Es una de las mejores herramientas y se puede conseguir una licencia maker gratuita que tiene una funcionalidad limitada.
+
+Es el paso natural desde tinkercad
 
 [breve tutorial](https://bitfab.io/es/blog/fusion-360-impresion-3d/)
 
