--- a/9.0.HerramientasDiseño3D.md
+++ b/9.0.HerramientasDiseño3D.md
@@ -1,4 +1,4 @@
-#### Herramientas de diseño en 3D
+# Herramientas de diseño en 3D
 
 Existen muchas y diferentes herramientas para diseñar en 3D. De hecho existen casi tantas como usos diferentes podamos darle a estos diseños.
 
