--- a/9.10.Escaneado3D.md
+++ b/9.10.Escaneado3D.md
@@ -3,7 +3,7 @@
 Una herramienta muy interesante cuando trabajamos en 3D es el poder escanear piezas reales. Para ello necesitamos Escáner 3D y un software que nos permite importar nuestros modelos
 
 
-## Tipos de escáner 3D
+### Tipos de escáner 3D
 
 * Escanner 3D DIY: permite escanear piezas pequeñas, rotándolas y tomando múltiples imágenes. Un software genera una nube de puntos
 
@@ -13,7 +13,7 @@ Una herramienta muy interesante cuando trabajamos en 3D es el poder escanear pie
 
 ![Escáner profesional](./images/go-scan-3d-spark.jpeg)
 
-## Escáner de luz estructurada
+### Escáner de luz estructurada
 
 (Gracias a Esteban Fernández Navarro por esta documentación)
 
@@ -84,7 +84,7 @@ Para simplificar aún más el modelo o para trabajar con una malla ordenada util
 
 
 
-## Escáner 3D DIY
+### Escáner 3D DIY
 
 Si quieres puedes montarte este [escáner 3D DIY](https://www.thingiverse.com/thing:3958326)
 
