--- a/9.2.0.Tinkercad.md
+++ b/9.2.0.Tinkercad.md
@@ -1,4 +1,4 @@
-# [TinkerCad.com](https://www.tinkercad.com/)
+## [TinkerCad.com](https://www.tinkercad.com/)
 
 ![](./images/tinkercad.png)
 
@@ -31,7 +31,7 @@ Creación de piezas y movimiento del punto de vista
 
 [Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
 
-## Paletas de componentes
+### Paletas de componentes
 
 A la derecha encontramos las paletas de primitivas:
 
@@ -47,19 +47,19 @@ A la derecha encontramos las paletas de primitivas:
 
 [Video: 3. Uso de paletas de primitivas](https://drive.google.com/file/d/16HLUdWgSOmbnK2T5we5QDWT_EFRt1v0-/view?usp=sharing)
 
-## Propiedades de un diseño
+### Propiedades de un diseño
 
 [![Video: 4. Propiedades de un diseño](https://img.youtube.com/vi/-uj2iGIRV38/0.jpg)](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
 
 [Video: 4. Propiedades de un diseño](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
 
-## Giros y rotaciones
+### Giros y rotaciones
 
 [![Video: 5 Giros y rotaciones](https://img.youtube.com/vi/pb2iHcSGiQU/0.jpg)](https://drive.google.com/file/d/1Z1YQ0bZRSdEIl9aSInAokpPQ0HU6A36a/view?usp=sharing)
 
 [Video: 5 Giros y rotaciones](https://drive.google.com/file/d/1Z1YQ0bZRSdEIl9aSInAokpPQ0HU6A36a/view?usp=sharing)
 
-## Ejemplo: diseñando una casita
+### Ejemplo: diseñando una casita
 
 Vamos a hacer un diseño sencillo de una casita, usaremos los elementos que hemos visto y la herramienta de cambio de **plano de diseño**
 
@@ -67,7 +67,7 @@ Vamos a hacer un diseño sencillo de una casita, usaremos los elementos que hemo
 
 [Video: 6. Ejemplo: una casita](https://drive.google.com/file/d/1_eg8brz1fdx0EWn70wXMl7xLcq2DXGzD/view?usp=sharing)
 
-## Agrupar y desagrupar elementos
+### Agrupar y desagrupar elementos
 
 Al agrupar varias piezas hacemos que todas ellas se comporten como una sola, a la hora de moverlas, redimensionarlas, rotarlas, etc... lo que es muy útil para ir construyendo diseños más complejo.s
 
@@ -80,13 +80,13 @@ De la misma manera, cuando los vamos desagrupando, se hace progresivamente.
 [Video: 7. Agrupar y desagrupar elementos](https://drive.google.com/file/d/1tQCUuhg-krdwzpap2_xn_qtJgFC4c7fi/view?usp=sharing)
 
 
-## Copiar pegar objetos
+### Copiar pegar objetos
 
 Una vez tenemos una pieza diseñadas podemos crear copias con las herramientas copiar/pegar
 
 [![Video: 8. Copiar y pegar objetos](https://img.youtube.com/vi/KN5zTTwtLZQ/0.jpg)](https://drive.google.com/file/d/1yQ3EsfXe2o7lxrtGO4tjAE4825x1BhGm/view?usp=sharing)
 
-## Alineamiento de componentes
+### Alineamiento de componentes
 
 Podemos usar la herramienta de alineación para colocar varias piezas alineadas, bien sea a la izquierda, centradas o a la derecha.
 
@@ -97,13 +97,13 @@ Podemos usar la herramienta de alineación para colocar varias piezas alineadas,
 
 [![Video: 10. Alineamiento entre distintos componentes](https://img.youtube.com/vi/vStwTeyoQrs/0.jpg)](https://drive.google.com/file/d/1lBoD6ih0AnDRIEmQk64PCrGwjUPkSQkf/view?usp=sharing)
 
-## Trabajando con huecos
+### Trabajando con huecos
 
 Del mismo modo que trabajamos añadiendo bloques, también podemos "restar" volúmenes usando bloques **huecos**, es decir usaremos las mismas primitivas, pero marcándolos como "Hueco". Al agruparlos con otros componentes su volumen se restará.
 
 [![Video: 11. Trabajando con huecos](https://img.youtube.com/vi/vXhMgF0qSNw/0.jpg)](https://drive.google.com/file/d/1UrR2SUDeJQ8VyW2t3psS7Cbq6P8ka5xo/view?usp=sharing)
 
-## Importación de diseños
+### Importación de diseños
 
 Podemos importar diseños en los típicos formatos que usamos para impresión 3D, como STL o OBJ:
 
@@ -114,7 +114,7 @@ También podemos importar otros diseños hechos en Tinkercad, bien sean nuestros
 
 [![Video: 13-14. Importar diseños de Tinkercad en nuestros diseños](https://img.youtube.com/vi/VW8qxS0n1Tg/0.jpg)](https://drive.google.com/file/d/1CCF0-jN_-DKovmkd5e_KuzjRyGSCxb-D/view?usp=sharing)
 
-## Convertir un diseño 2D a 3D
+### Convertir un diseño 2D a 3D
 
 Por ejemplo, importar un logo y darle aspecto 3D e incluirlo en nuestro diseño
 
@@ -133,7 +133,7 @@ Cuando ya tenemos la imagen
 
 [![Video: 16. Diseño de un clon de Among Us](https://img.youtube.com/vi/1BXxVjlM5y0/0.jpg)](https://drive.google.com/file/d/1oEkljypXH0uvzGGhi8uXANygH72-USHR/view?usp=sharing)
 
-## Resumen de funcionalidad
+### Resumen de funcionalidad
 
 * Plano de trabajo
     * Podemos cambiar el plano de trabajo y así todo lo que hagamos se referirá al nuevo
@@ -159,7 +159,7 @@ Cuando ya tenemos la imagen
   * En propiedades podemos cambiar el nombre  
   * Usar la regla sobre un objeto y así modificar sus dimensiones o ángulos
 
-## Teclas
+### Teclas
 
 
 * Ctrl + C, Ctrl + V Copy and paste
