--- a/9.3.Freecad.md
+++ b/9.3.Freecad.md
@@ -1,4 +1,4 @@
-# FreeCad.md
+## FreeCad.md
 
 [FreeCad](http://www.freecadweb.org/) es una herramienta opensource de diseño semiprofesional orientada a la creación de diseños mecánicos e industriales. No llega a tener la funcionalidad de los software profesionales, pero cada vez es más potente.
 
@@ -18,9 +18,9 @@
 * Operadores lógicos
 * Achaflanados, redondeados, ...
 
-[Videotutoriales (40)](http://www.iearobotics.com/wiki/index.php?title=Dise%C3%B1o_de_piezas_con_Freecad)
+[Videotutoriales (40)](https://youtu.be/2_DbFzFV9D4?feature=shared)
 
-# Ejemplos sencillos
+### Ejemplos sencillos
 
 * Creación de una escalera de cubos
 
