--- a/9.5.SketchUp.md
+++ b/9.5.SketchUp.md
@@ -1,4 +1,4 @@
-# [SketchUp](https://www.sketchup.com/es)
+## [SketchUp](https://www.sketchup.com/es)
 
 ![](./images/free_floorplan_software_sketchup_furniture1.jpg)
 
@@ -31,7 +31,7 @@ Es una herramienta 2D que permite "levantar" los dibujos
 
 
 
-# Tareas
+### Tareas
 
 * Dibujar una casita
 * Añadir una chimenea "a mano" (3 formas de hacerlo)
