--- a/9.6.BlockScad.md
+++ b/9.6.BlockScad.md
@@ -1,4 +1,4 @@
-# [BlockScad](https://www.blockscad3d.com/editor/)
+## [BlockScad](https://www.blockscad3d.com/editor/)
 
 ![](./images/BlocksCad.jpeg)
 
