--- a/9.9.2d-To-3D_v2.md
+++ b/9.9.2d-To-3D_v2.md
@@ -1,15 +1,15 @@
-# 2D a 3D
+## 2D a 3D
 
 Veamos cómo crear un objeto 3D a partir de un logo. Funciona mejor con imágenes vectoriales (que suelen ser más sencillas)
 
-## Importación en Tinkercad:
+### Importación en Tinkercad:
 
 * Elegimos la imagen
 * Si no es SVG lo convertimos a SVG unsando un [conversor online](https://image.online-convert.com/) o Inkscape, como veremos a continuación
 * Abrimos Tinkercad
 * Pulsamos el botón Import y elegimos tamaño y altura.
 
-## Inkscape
+### Inkscape
 
 Vamos a ver cómo vectorizar una imagen de mapa de bits usando el software libre InkScape
 
