--- a/5.1.Uso_i3.md
+++ b/5.1.Uso_i3.md
@@ -19,7 +19,7 @@ Para comprobarlo hacemos lo siguiente:
 
 ![Ajustando la nivelación del eje Z](./images/NivelandoZ_2.png)
 
-[![Vídeo: Calibración eje Z de una impresora Prusa i3](https://img.youtube.com/vi/CARIvKaBPZI/0.jpg)](https://drive.google.com/file/d/1aS1MZ_LhK-j0dHINvCfzJxRSlXFm_L9I/view?usp=sharing
+[![Vídeo: Calibración eje Z de una impresora Prusa i3](https://img.youtube.com/vi/CARIvKaBPZI/0.jpg)](https://drive.google.com/file/d/1aS1MZ_LhK-j0dHINvCfzJxRSlXFm_L9I/view?usp=sharing)
 
 [Vídeo: Calibración eje Z de una impresora Prusa i3](https://drive.google.com/file/d/1aS1MZ_LhK-j0dHINvCfzJxRSlXFm_L9I/view?usp=sharing)
 
