--- a/4.2.0.Montaje_impresoras3D.md
+++ b/4.2.0.Montaje_impresoras3D.md
@@ -7,7 +7,7 @@ Además cada vez incluyen más automatismos que hacer que el tedioso proceso de 
 
 Atrás quedaron los kits con cientos de piezas y tornillos...
 
-![](./images/kit-de-piezas-plasticas-en-abs-para-impresora-3d-prusa-i3-322501-MLA20343446241_072015-F.jpg)
+![](./images/kit_img_3948.jpg)
 
 Y las 8-10 horas de montaje, ajuste y calibración...
 
