--- a/4.0.3.Kits.md
+++ b/4.0.3.Kits.md
@@ -21,7 +21,7 @@ Si incluimos todos los componentes de la electrónica, los del extrusor...
 
 Y si ahora juntamos todas las piezas...
 
-![Componentes de un kit de impresora Prusa I3](./images/img_3948.jpg)
+![Componentes de un kit de impresora Prusa I3](./images/kit_img_3948.jpg)
 
 
 No te asustes, a día de hoy las impresoras en kits suelen tener muchas menos piezas, y la mayoría de las comerciales vienen semimontadas al 80-90%.
